fix(www): fix code blocks overflowing

--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -71,4 +71,5 @@ pre > code {
   border-radius: 0.25rem;
   line-height: 1.5;
   color: var(--color-slate-900);
+  overflow-x: scroll;
 }
